# xwr

./: .gitignore  LICENSE  README.md  hatch_build.py  mkdocs.yml  pyproject.toml  update_gh_pages.sh
.github/workflows/: ci.yml  docs.yml
demo/: config.yaml  config_awr2944.yaml  config_awrl6844.yaml  demo.py  pyproject.toml  rerun_pc.py  spectrum.py
docs/: constraints.md  develop.md  firmware.md  index.md  ros.md  rsp.md  setup.md  system.md  usage.md
docs/dca/: api.md  defines.md  types.md
docs/radar/: api.md  common.md  defines.md  raw.md
docs/rsp/: jax.md  rsp.md  torch.md
docs/setup/: capture.md  overview.md  radar.md
docs/stylesheets/: extra.css
src/awr_api/: __init__.py  awr_api.py  awr_boilerplate.py  awr_types.py  config.py  dca_api.py  dca_types.py  system.py
src/awr_api/capture/: api.py  types.py
src/awr_api/radar/: __init__.py  api.py  base.py  defines.py  raw.py
src/xwr/: __init__.py  config.py  constraints.py  system.py
src/xwr/capture/: __init__.py  _fast.c  api.py  types.py
src/xwr/nn/: __init__.py  representations.py  utils.py
src/xwr/nn/torch/: __init__.py  representations.py  utils.py
src/xwr/radar/: __init__.py  api.py  base.py  common.py  raw.py
src/xwr/rsp/: __init__.py  common.py  generic.py  rsp.py
src/xwr/rsp/jax/: __init__.py  aoa.py  common.py  rsp.py  spectrum.py
src/xwr/rsp/numpy/: __init__.py  rsp.py
src/xwr/rsp/torch/: __init__.py  common.py  rsp.py
tests/: config.yaml  test_capture.py  test_constraints.py  test_nn.py  test_rsp.py
