[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xwr"
version = "0.2.0"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "Standalone linux-compatible TI AWR1843/DCA1000EVM API implementation."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=2.0",
    "beartype>=0.20",
    "pyserial>=3.5",
    "types-pyserial>=3.5"
]

[project.optional-dependencies]
docs = [
    # Most recent as of 16.04.2025; exact versions shouldn't matter unless the
    # API is changed, so we pin here just in case.
    "mkdocs == 1.6.*",
    "mkdocs-material == 9.6.*",
    "mkdocstrings-python-xref == 1.16.*",
    "mkdocstrings[python] == 0.29.*"
]
interactive = [
    "ipykernel",
    "ipywidgets",
    "matplotlib"    
]

[project.urls]
Homepage = "https://github.com/WiseLabCMU/awr-api"
Issues = "https://github.com/WiseLabCMU/awr-api/issues"
