[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xwr"
version = "0.3.0"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "Linux-Compatible Real-Time Raw Data Capture for TI mmWave Radars."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=2.0",
    "beartype>=0.20",
    "pyserial>=3.5",
    "types-pyserial>=3.5",
    "jaxtyping>=0.3.2",
]

[project.optional-dependencies]
torch = [ "torch>=2.0" ]
jax = [ "jax>=0.4.0" ]
docs = [
    # Most recent as of 16.04.2025; exact versions shouldn't matter unless the
    # API is changed, so we pin here just in case.
    "mkdocs == 1.6.*",
    "mkdocs-material == 9.6.*",
    "mkdocstrings-python-xref == 1.16.*",
    "mkdocstrings[python] == 0.29.*",
    "ruff>=0.11.0"
]
interactive = [
    "matplotlib",
    "ipykernel"
]

[project.urls]
Homepage = "https://github.com/WiseLabCMU/xwr"
Issues = "https://github.com/WiseLabCMU/xwr/issues"
