[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xwr"
version = "0.3.0"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "Linux-Compatible Real-Time Raw Data Capture for TI mmWave Radars."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.19",
    "beartype>=0.20",
    "pyserial>=3.5",
    "types-pyserial>=3.5",
    "jaxtyping>=0.3.2",
    "pyFFTW>=0.15.0"
]

[project.optional-dependencies]
torch = [
    "torch>=2.0"
]
jax = [
    "jax>=0.4.0",
]
demo = [
    "matplotlib>=3.0",
    "pyyaml>=6.0",
    "PyQt6>=6.0.0",
    "tyro>=0.8.0",
    "rich>=13.0.0",
]
testing = [
    "pytest>=8.0.0",
    "coverage",
    "pytest-cov",
    "pyright",
]
docs = [
    # Most recent as of 16.04.2025; exact versions shouldn't matter unless the
    # API is changed, so we pin here just in case.
    "mkdocs == 1.6.*",
    "mkdocs-material == 9.6.*",
    "mkdocstrings-python-xref == 1.16.3",
    "mkdocstrings-python == 1.16.6",
    "ruff>=0.11.0"
]

[project.urls]
Homepage = "https://github.com/WiseLabCMU/xwr"
Issues = "https://github.com/WiseLabCMU/xwr/issues"

[tool.coverage.report]
exclude_also = [
    '^\s*\.\.\.\s*$',
    'def __repr__',
    'if __name__ == .__main__.:',
    'class .*\bProtocol\):',
    'raise NotImplementedError',
]
